JSY-14998 fix: word-wrap: break-word和white-space: pre会导致safari下文本换行有问题，先回退

--- a/src/less/base/single/text.less
+++ b/src/less/base/single/text.less
@@ -3,6 +3,5 @@
 .bi-text {
   .overflow-hidden();
   .box-sizing(border-box);
-  word-wrap: break-word;
   word-break: break-all;
 }
